# MA2

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  requirements.txt
MeshAnything/miche/: encode.py
MeshAnything/models/: meshanything_v2.py  shape_opt.py
integrations/: MVP_SETUP.md  README.md
integrations/blender_meshanything/: VENDOR_CLIENT.txt  __init__.py  operators.py  preferences.py  scene_props.py
integrations/blender_meshanything/meshanything_client/: __init__.py  client.py  config.py  errors.py
integrations/houdini/: meshanything_hda.py
integrations/meshanything_client/: pyproject.toml
integrations/meshanything_client/meshanything_client/: client.py
integrations/scripts/: create_hf_space.py  test_decimate.py  test_mvp.py
integrations/space_api/: app.py  inference_service.py  requirements.txt  run_local.ps1  trimesh_decimate.py
meshanything_train/miche/example_data/surface/: surface.npz
pc_examples/: grenade.npy  mouse.npy
